--- a/parcel/index.html
+++ b/parcel/index.html
@@ -7,8 +7,7 @@
     <title>Parcel</title>
 </head>
 <body>
-    <div class="app"></div>
-    <h1>Hello World!</h1>
+    <div id="app"></div>
     <script src="./index.js"></script>
 </body>
 </html>
